WAVE audit showed I had many contrast errors, so I fixed all errors

--- a/css/contact.css
+++ b/css/contact.css
@@ -16,7 +16,7 @@ form {
 
 .form-title {
   margin: 0;
-  color: var(--coral-pink);
+  color: var(--black);
 }
 
 .directions {
@@ -60,8 +60,8 @@ form {
 .submit {
   display: inline-block;
   width: 49.5%;
-  color: var(--white);
-  background-color: var(--coral-pink);
+  color: var(--black);
+  background-color: var(--pink-leaf);
   padding: 0.5rem;
 }
 
