--- a/css/previous-work.css
+++ b/css/previous-work.css
@@ -35,7 +35,7 @@
 }
 
 .section-title {
-  color: var(--coral-pink);
+  color: var(--black);
 }
 
 .section-description {
